# rwatmo

./: README.md
doc/: doxy.conf
include/: nrlmsise.hpp
src/nrlmsise00/: nrlmsise_density.cpp
test/: CMakeLists.txt  msise_output_test.cpp
